--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>org.go.game.ClientServer.GO</mainClass>
+                    <mainClass>go.game.ClientServer.GO</mainClass>
                 </configuration>
             </plugin>
         </plugins>
