--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-jdbc.url = jdbc:mysql://127.0.0.1:3307/go
+jdbc.url = jdbc:mysql://127.0.0.1:3306/go
 jdbc.user = root
-jdbc.password = 314159265
+jdbc.password = Alicja15
 jdbc.driverClass = com.mysql.cj.jdbc.Driver
